src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__call_expr-2.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            Call(
                Call {
                    target: GetVar(
                        GetVar {
                            name: Ident(
                                "a",
                            ),
                        },
                    ),
                    args: [
                        GetVar(
                            GetVar {
                                name: Ident(
                                    "b",
                                ),
                            },
                        ),
                        GetVar(
                            GetVar {
                                name: Ident(
                                    "c",
                                ),
                            },
                        ),
                    ],
                },
            ),
        ),
        Expr(
            Call(
                Call {
                    target: GetVar(
                        GetVar {
                            name: Ident(
                                "a",
                            ),
                        },
                    ),
                    args: [
                        GetVar(
                            GetVar {
                                name: Ident(
                                    "b",
                                ),
                            },
                        ),
                        GetVar(
                            GetVar {
                                name: Ident(
                                    "c",
                                ),
                            },
                        ),
                        GetVar(
                            GetVar {
                                name: Ident(
                                    "d",
                                ),
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
