src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__call_expr.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Call(
    Call {
        target: GetVar(
            GetVar {
                name: Ident(
                    "a",
                ),
            },
        ),
        args: [
            GetVar(
                GetVar {
                    name: Ident(
                        "b",
                    ),
                },
            ),
            GetVar(
                GetVar {
                    name: Ident(
                        "c",
                    ),
                },
            ),
        ],
    },
)
