src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__class_self_and_super-12.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
cannot access `super` outside of a class method that takes `self`
| print [4;31msuper[0m


